# photon

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  EmbedFrontend.cmake
frontend/: .env.example  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  middleware.ts
frontend/src/api/: connection.ts  rest.ts  websocket.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/components/: ChannelFader.tsx  Header.tsx  ShowfilePanel.tsx  UniverseSelector.tsx
frontend/src/lib/: auth.ts  env.ts  jwt.ts  supabase.ts
frontend/src/store/: dmxStore.ts  instanceStore.ts  showfileStore.ts
frontend/src/views/: Dashboard.tsx
relay/: Dockerfile  fly.toml  package-lock.json  package.json  tsconfig.json
relay/src/: client-registry.ts  engine-registry.ts  heartbeat.ts  jwt.ts  server.ts
src/: main.cpp
src/application/: Application.cpp  Application.h  Config.cpp  Config.h
src/engine/: ActionQueue.h  MergeBuffer.cpp  MergeBuffer.h  OutputScheduler.cpp  OutputScheduler.h  SourcePriority.h  Universe.cpp  Universe.h
src/protocol/: ArtNetSender.cpp  ArtNetSender.h  DeviceManager.cpp  DeviceManager.h  OutputDevice.h
src/relay/: RelayClient.cpp  RelayClient.h
src/web/: BroadcastObserver.h  RestApi.cpp  RestApi.h  WebServer.cpp  WebServer.h  WsBroadcaster.cpp  WsBroadcaster.h
supabase/migrations/: 001_initial_schema.sql
tests/: CMakeLists.txt  test_artnet.cpp  test_merge_buffer.cpp  test_universe.cpp
(+14 files in other folders)
